# Graph-Diffusion

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
reports/figures/sampling/: real_graph_stats.csv  real_vs_sampled_summary.csv  sampled_graph_stats.csv
src/: config.py  dataset.py  dataset_discreet.py  dataset_discrete.py  plots.py
src/modeling/: model.py  model_discreet.py  model_discrete.py  predict.py  tempCodeRunnerFile.py  train.py  train_discrete.py  utils.py
